// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Evaluation status renders a failed status 1`] = `
<Component
  color="red"
  icon={
    <ErrorCircleOIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  }
>
  <span>
    Failed
  </span>
</Component>
`;

exports[`Evaluation status renders a not evaluated status 1`] = `
<Component
  color="red"
  icon={
    <MinusCircleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  }
>
  <span>
    Not evaluated
  </span>
</Component>
`;

exports[`Evaluation status renders a skipped status 1`] = `
<Component
  color="red"
  icon={
    <FastForwardIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  }
>
  <span>
    Skipped
  </span>
</Component>
`;

exports[`Evaluation status renders a succeeded status 1`] = `
<Component
  color="green"
  icon={
    <CheckCircleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  }
>
  <span>
    Succeeded
  </span>
</Component>
`;

exports[`Evaluation status renders an evaluating status 1`] = `
<Component
  color="orange"
  icon={
    <HourglassHalfIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  }
>
  <span>
    Evaluating
  </span>
</Component>
`;
